--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     
     <title lang="en">
-      Sexual violence young people in schools and colleges - GOV.UK
+      Sexual Violence Between Young People in Schools and in Colleges - GOV.UK
   </title>
 
     <!--[if gt IE 8]><!--><link rel="stylesheet" media="screen" href="./index_files/govuk-template-3e3f4a131aca72f9b2e458dfd318f65420aef6ada35539243aac38ebbbbcc64f.css">
