--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       Guidance
     </span>
   <h1 class="gem-c-title__text gem-c-title__text--long">
-    Sexual violence and sexual harassment between children in schools and colleges
+    Sexual violence between young people in schools and colleges
   </h1>
 </div>
   </div>
