Update to text on lines 385, 387, 396 and 397 - and added line 378

--- a/index.html
+++ b/index.html
@@ -375,15 +375,16 @@
   <li>proprietors of independent schools (including academies, free schools and alternative provision academies) and non-maintained special schools</li>
   <li>management committees of pupil referral units</li>
   <li>headteachers, principals, senior leadership teams and designated safeguarding leads</li>
+  <li>any teacher looking to respond to sexual violence in a transformative and non-punitive way away from the criminal justice system</li>
+
 </ul>
 
 <p>It covers:</p>
 
 <ul>
-  <li>what sexual violence and harassment is</li>
-  <li>schools’ and colleges’ legal responsibilities</li>
-  <li>a whole school or college approach to safeguarding and child protection</li>
-  <li>how to respond to reports of sexual violence and sexual harassment</li>
+  <li>what sexual violence is</li>
+  <li>schools’ and colleges’ responsibilities</li>
+  <li>how to respond transformatively without punitivity to sexual violence</li>
 </ul>
 </div>
 
@@ -392,8 +393,8 @@
     </div>
 
     <div class="app-c-published-dates app-c-published-dates--history" id="history" data-module="toggle" lang="en">
-    Published 14 December 2017
-    <br>Last updated 17 May 2018
+    Published 10 December 2020
+    <br>Last updated 10 December 2020
       <a href="https://www.gov.uk/government/publications/sexual-violence-and-sexual-harassment-between-children-in-schools-and-colleges#full-history" class="app-c-published-dates__toggle govuk-link" data-controls="full-history" data-expanded="false" data-toggled-text="- hide all updates" role="button" aria-controls="full-history" aria-expanded="false">+&nbsp;show all updates</a>
       <div class="app-c-published-dates__change-history js-hidden" id="full-history" aria-live="polite" role="region">
         <ol>
